<resources>
    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_seleccionar">"Contacto seleccionado: "</string>
    <string name="añadirContacto">añadirContacto</string>
    <string name="aniadirContacto">aniadirContacto</string>
    <string name="acercaDe">acerca de</string>
    <string name="borrarContacto">Borrar contacto</string>
    <string name="verDetalles">Ver Detalles</string>
    <string name="lblNombreC" />
    <string name="lblNombreCo">Nombre</string>
    <string name="lblTelefonoC">Telefono</string>
    <string name="lblTipoC">Tipo</string>
    <string name="lblEmailC">Email</string>
    <string name="lblDireccion">Direccion</string>
    <string name="lblDireccionC">Direccion</string>
    <string name="btnGuardar">Guardar</string>
</resources>